syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/353solutions/rides/pb";

message Location {
  double lat = 1;
  double lng = 2;
}

enum RideType {
  USET = 0;
  REGULAR = 1;
  POOL = 2;
}

message StartRequest {
  string id = 1;
  string driver_id = 2;
  Location location = 3;
  repeated string passenger_ids = 4;
  google.protobuf.Timestamp time = 5;
  RideType type = 6;
}

message StartResponse { string id = 1; }

message EndRequest {
  string id = 1;
  google.protobuf.Timestamp time = 2;
  double distance = 3;
}

message EndResponse { string id = 1; }

service Rides {
  rpc Start(StartRequest) returns (StartResponse) {}
  rpc End(EndRequest) returns (EndResponse) {}
}
